clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_backgrounded_commands.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 195
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cmd1 & cmd2 & cmd3",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd1",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Async),
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd2",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Async),
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cmd3",
                  loc: "[location]",
                )),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
