clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_brace_expansion_context.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 134
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo {a,b,c}",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "{a,b,c}",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
