clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_case_no_semicolon.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 47
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "case x in\nx)\n    echo y\nesac",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(CaseClause(CaseClauseCommand(
                value: Word(
                  value: "x",
                  loc: "[location]",
                ),
                cases: [
                  CaseItem(
                    patterns: [
                      Word(
                        value: "x",
                        loc: "[location]",
                      ),
                    ],
                    cmd: Some(CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Simple(SimpleCommand(
                              word_or_name: Some(Word(
                                value: "echo",
                                loc: "[location]",
                              )),
                              suffix: Some(CommandSuffix([
                                Word(Word(
                                  value: "y",
                                  loc: "[location]",
                                )),
                              ])),
                            )),
                          ],
                        ),
                      ), Sequence),
                    ])),
                    post_action: ExitCase,
                    loc: "[location]",
                  ),
                ],
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
