clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__complex__parse_extglob_patterns.snap
---
source: clash-brush-parser/src/parser/tests/complex.rs
assertion_line: 239
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls !(*.txt) +(foo|bar) ?(a|b)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "!(*.txt)",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "+(foo|bar)",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "?(a|b)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
